--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+a {
+  color: #90caf9;
+  background-color: transparent;
+  border: 0;
+  border-radius: 4px;
+  margin: .5rem;
+  padding: .5rem;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
