Improvements to vault links - Added cleaner Typescript typing and visual indicator if visited.

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ a {
   margin: .5rem;
   padding: .5rem;
 }
+
+a:visited {
+  color: #42a5f5
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
